public/app/css/chise.css
/* ... */
#align-button:focus {
    outline: none;
}

#align-dd-button:focus {
    outline: none;
}

.dd-list-href {
    padding-left: 0px !important;
}

.sbgn-dd-list {
    height: 30px;
}

.sbgn-dd-list > button {
    height: 26px;
    background-color: transparent;
    border-color: rgba(0, 0, 0, 0.14902) rgba(0, 0, 0, 0.14902) rgba(0, 0, 0, 0.247059);
    position:relative;
    top: 50%;
    transform: translateY(-50%);
}

.sbgn-dd-list > button > div {
    position:relative;
    top: 6px;
    transform: translateY(-50%);
}

.target-cursor {
    cursor: url(../../app/img/drag-target.cur), pointer!important;
}

.panel-heading {
    cursor: pointer;
    height: 17px;
    margin: 0px;
    padding: 0px;
    text-align: center;
    background-color: #eee;
}

.panel-title {
    font-size: 12px;
    color: #555;
}

.panel {
    border: 1px solid transparent;
}

.accordion-toggle {
    /* symbol for "opening" panels */
    height: auto;
}

/* CSS Method for adding Font Awesome Chevron Icons */
.accordion-toggle:after {
    /* symbol for "opening" panels */
    font-family:'FontAwesome';
    content:"\f077";
    float: right;
    padding-right: 4px;
    color: inherit;
}
.panel-heading.collapsed .accordion-toggle:after {
    /* symbol for "collapsed" panels */
    content:"\f078";
}

.sbgn-label-font {
    font-size: 11px !important;
}

.inspector-input-box{
    margin-bottom: 2px !important;
    font-size: 12px !important;
    color: #555555;
    vertical-align: middle;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    padding-bottom: 0.5px;
    padding-top: 0.5px;
}

hr.inspector-divider {
    padding: 0px !important;
    margin-top: 5px !important;
    margin-bottom: 5px !important;
    width: 100% !important;
}

#node-label-textbox {
    position: absolute;
    top: 150px;
    left: 150px;
    z-index: 100;
    display: none;
    width: 100px;
}

.element-palette img {
    padding: 1px;
    cursor: pointer;
}

.element-palette td {
    padding: 3px;
}

.element-palette div {
    width: 36px;
    height: 30px;
}

.selected-mode.inactive-palette-element {
    border-style: dotted;
    border-width: 1px;
}

.selected-mode.inactive-palette-element img{
    margin: 1px;
}

.chise-tab a {
    color: #555;
}

/*.chise-tab.active {
    font-weight: bold;
}*/

.chise-tab.active a {
    background: #eee !important;
}

.btn-default {
    border-color: #0B9BCD !important;
    border-style: solid !important;
    border-width: 1px !important;
    border-radius: calc !important;
}

#sbgn-toolbar img {
    height: 24px;
}

.element-palette img {
    height: 26px;
}


/*#sbgn-network-container {*/
    /*position: absolute;*/
    /*!*margin: auto;*!*/
    /*border: 1px solid #dddddd;*/
    /*border-radius: 0.25em;*/
    /*!*height: 680px;*!*/
    /*bottom: 10px;*/
    /*!*width: 800px;*!*/
    /*top: 95px;*/
    /*left: 40px;*/
    /*!*right: 350px;*!*/
    /*!*overflow: auto !important;*!*/
    /*overflow-x: hidden;*/
    /*!*float: left;*!*/
/*}*/
/*#sbgn-network-container {*/
    /*margin: auto;*/
    /*border: 1px solid #ddd;*/
    /*height: 680px;*/
    /*width: 800px;*/
    /*!*overflow: auto !important;*!*/
    /*overflow: hidden;*/
    /*border-radius: 0.25em;*/
    /*!*float: left;*!*/
/*}*/
/*#inspector-tab-area{*/
    /*!*width and height are updated dynamically*!*/
    /*position: absolute;*/
    /*right: 0px;*/
    /*overlow: hidden;*/
    /**/
/*}*/
#inspector-tab-area{

    margin: auto;
    border: 1px solid #ddd;
    height: 680px;
    width: 400px;
    overflow: hidden;
    border-radius: 0.25em;
    /*padding-left: 2px;*/
    padding-right: 2px;
    position: relative;
    /*position:absolute;*/
    /*margin: auto;*/
    /*border: 1px solid #ddd;*/
    /*left:810px;*/
    /*height: 680px;*/
    /*width: 200px;*/
    /*overflow: auto !important;*/
    /*border-radius: 0.25em;*/
    /*!*padding-left: 2px;*!*/
    /*padding-right: 2px;*/
    /*float: right;*/

}
#inspector-tabs{
    position: absolute;

    overflow-x: hidden;
    bottom: 0px;
    width: 100%;
    padding-top: 2px;
    right: 0px;

    /*border-radius: 0.25em;*/
}

.tab-link{
    color: #15b3cd;

}


/* Style the close button */
.close-icon {
    display:block;
    box-sizing:border-box;
    width:20px;
    height:20px;
    border-width:3px;
    border-style: solid;
    border-color:#15b3cd;;
    border-radius:100%;
    background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%);
    background-color:#15b3cd;;
    box-shadow:0px 0px 5px 2px rgba(0,0,0,0.5);
    transition: all 0.3s ease;
}

.tab-content{
    width: inherit;
    height: inherit;
}


/*#sbgn-inspector {*/
    /*position: absolute;*/
    /*border: 1px solid #dddddd;*/
    /*overflow-x: hidden;*/
    /*right: 0px;*/
    /*width: 100%;*/
    /*height: 95%;*/
    /*padding: 5px;*/
    /*border-radius: 0.25em;*/


/*}*/

#command-history-area{
    position: absolute;
    border: 1px solid #dddddd;
    width: 100%;
    height: 90%;
    right: 0px;
    top: 0px;
    /*font-size: small;*/
    overflow: hidden;
    /*overflow-y: auto;*/
    /*white-space: pre-wrap;*/
    /*word-wrap: break-word;*/
    /*padding: 5px;*/
    /*-webkit-overflow-scrolling: touch;*/
    /*border-radius: 0.25em;*/
    /*float: right;*/
}
#command-messages{
    position: absolute;
    width: 100%;
    height: 95%;
    right: 0px;
    top: 0px;
    font-size: small;
    overflow: auto;
    overflow-y: auto;
    white-space: pre-wrap;
    word-wrap: break-word;
    padding: 5px;
    -webkit-overflow-scrolling: touch;
    border-radius: 0.25em;
    /*float: right;*/
}

#image-area{
    overflow: hidden;
    position: absolute;
    width: 100%;
    height: 90%;
    padding: 5px;
    right: 0px;
    top: 0px;
    font-size: 12px;
    border: 1px solid #dddddd;
}
/* ... */

